--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
-  "name": "template-react-component-library",
-  "version": "0.0.1",
+  "name": "@Prathyush-KKK/template-library",
+  "version": "0.0.2",
   "description": "trial template for a react library",
   "scripts": {
     "rollup": "rollup -c --bundleConfigAsCjs"
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "rollup": "^3.29.3",
     "rollup-plugin-dts": "^6.0.2",
+    "rollup-plugin-postcss": "^4.0.2",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2"
   },
@@ -29,5 +30,8 @@
   "files": [
     "dist"
   ],
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/Prathyush-KKK"
+  }
 }
