added storybook support

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,32 @@
 node_modules
 dist
+
+package-lock.json
+yarn.lock
+.pnp.cjs
+.pnp.js
+.pnp.mjs
+
+
+node_modules/
+jspm_packages/
+
+*.d.ts
+
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+
+*.log
+
+.vscode/
+
+/.storybook-static/
+/.rollup-cache/
+/.rpt2_cache/
+/.rts2_cache_cjs/
+/.rts2_cache_esm/
+/.vscode/
+/src/stories/
